@@ -1,10 +1,12 @@
 import java.util.*;
 
 public class SymTable{
-    private  List<HashMap<String,Sym>> table;
+    private  LinkedList<HashMap<String,Sym>> table;
     //This is the constructor; it should initialize the SymTable's List field to contain a single, empty HashMap.
     SymTable(){
-        addScope();
+        this.table = new LinkedList<HashMap<String,Sym>>();
+        HashMap newHashMap = new HashMap<String,Sym>();
+        table.addFirst(newHashMap);
     }
 
     //If this SymTable's list is empty, throw an EmptySymTableException. 
@@ -13,13 +15,13 @@ public class SymTable{
     //Otherwise, add the given name and sym to the first HashMap in the list.
     void addDecl(String name, Sym sym) throws DuplicateSymException, EmptySymTableException {
         if(table.isEmpty()){
-            throw EmptySymTableException;
+            throw new EmptySymTableException();
         }
-        if(name == "" | name == null){
-            throw NullPointerException;
+        if(name == "" | name == null | sym == null){
+            throw new NullPointerException();
         }
         if(lookupLocal(name) != null){
-            throw DuplicateSymException;
+            throw new DuplicateSymException();
         }
         addScope();
         table.get(0).put(name, sym);
@@ -28,18 +30,18 @@ public class SymTable{
     //Add a new, empty HashMap to the front of the list.
     void addScope(){
         HashMap newHashMap = new HashMap<String,Sym>();
-        table.add(0, newHashMap);
+        table.addFirst(newHashMap);
     }
 
     //If this SymTable's list is empty, throw an EmptySymTableException. 
     //Otherwise, if the first HashMap in the list contains name as a key, return the associated Sym; otherwise, return null.
     Sym lookupLocal(String name) throws EmptySymTableException{
         if (table.isEmpty()){
-            throw EmptySymTableException;
+            throw new EmptySymTableException();
         }
-        HashMap firstEntry = table.get(0);
+        HashMap firstEntry = table.getFirst();
         if(firstEntry.containsKey(name)){
-            Sym value = table.get(0).get(name);
+            Sym value = table.getFirst().get(name);
             return value;
         }
         return null;
@@ -50,7 +52,7 @@ public class SymTable{
     //otherwise, return null.
     Sym lookupGlobal(String name) throws EmptySymTableException{
         if (table.isEmpty()){
-            throw EmptySymTableException;
+            throw new EmptySymTableException();
         }
         for (HashMap<String,Sym> entry : table){
             if (entry.containsKey(name)){
@@ -65,7 +67,7 @@ public class SymTable{
     //To clarify, throw an exception only if before attempting to remove, the list is empty (i.e. there are no HashMaps to remove).
     void removeScope() throws EmptySymTableException{
         if (table.isEmpty()){
-            throw EmptySymTableException;
+            throw new EmptySymTableException();
         }
         table.clear();
     }
@@ -74,6 +76,9 @@ public class SymTable{
     //Then, for each HashMap M in the list, print M.toString() followed by a newline. 
     //Finally, print one more newline. All output should go to System.out.
     void print(){
+        if (table.getFirst().size() == 0){
+            throw new NullPointerException();
+        }
         System.out.println("\nSym Table\n");
         for (HashMap<String,Sym> entry : table){
             System.out.println(entry.toString());
